Header Handle: Fix - Edit header handles don't show up if the z-index of the header section is above 99 [ED-1628]

--- a/assets/dev/scss/editor/preview/preview.scss
+++ b/assets/dev/scss/editor/preview/preview.scss
@@ -27,7 +27,7 @@ html.elementor-html {
 
 .elementor {
 
-	&.loading{
+	&.loading {
 		opacity: 0.5;
 	}
 }
@@ -108,6 +108,8 @@ html.elementor-html {
 }
 
 .elementor-section-wrap {
+	position: relative;
+	z-index: 1;
 
 	&:empty {
 		min-height: 25px;
@@ -714,7 +716,7 @@ html.elementor-html {
 .elementor-add-new-section {
 	display: inline-block; // For smooth dragging above
 
-	.elementor-add-section-area-button  {
+	.elementor-add-section-area-button {
 		display: inline-flex;
 		align-items: center;
 		justify-content: center;
@@ -850,8 +852,8 @@ html.elementor-html {
 	&:after {
 		content: '';
 		position: absolute;
-		width:0;
-		height:0;
+		width: 0;
+		height: 0;
 		border: 8.5px solid transparent;
 		top: 0;
 	}
